# atmospheric-explorer

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .ruff.toml  MANIFEST.ini  README.md  dev-requirements.txt  env.yml  pyproject.toml  requirements.txt  test_streamlit.py  tox.ini
.github/workflows/: static.yml
.streamlit/: config.toml
atmospheric_explorer/: __init__.py  apis_test.ipynb  cams_interfaces.py  config.py  constants.cfg  constants.py  data_transformations.py  exceptions.py  loggers.py  logging.ini  old_constants.cfg  plots.ipynb  plots.py  plots_bug.ipynb  plotting_apis.py  plotting_apis_new.py  run_streamlit_app.py  shapefile.py  test.ipynb  try.ipynb  units_conversion.py  utils.py
atmospheric_explorer/api/: __init__.py  config.py  exceptions.py  local_folder.py  loggers.py  os_manager.py  os_utils.py  shapefile.py  singleton.py
atmospheric_explorer/cams_interface/: __init__.py  cams_interface.py  config_parser.py  units_conversion.py
atmospheric_explorer/cli/: __init__.py  logs.py  main.py  os_manager.py
atmospheric_explorer/constants/: __init__.py  constants.cfg  constants.py
atmospheric_explorer/data_interface/: __init__.py  cams_interface.py  config_parser.py  data_transformations.py
atmospheric_explorer/downloaders/: shapefile.py
atmospheric_explorer/plotting/: anomalies.py  hovmoller.py  plot_utils.py  plotting_apis.py  (+1 more)
documentation/: Makefile
tests/: conftest.py  test_cams_interfaces.py  test_costants.py  test_data_transformations.py  test_os_manager.py  test_shapefile.py  test_units_conversion.py  test_utils.py
(+188 files in other folders)
